--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>Welcome!</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -42,19 +42,19 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        I'm Marwan, a quantum physicist. Here, I (continue) to build my little
+        corner of the internet. Feel free to take a look around. If you have
+        anything to say, I'm happy to listen! Send me an email or message using
+        the contacts below.
       </p>
       <p>
-        Read the blog posts or check
+        Website n=built with Astro using Sat Naing's
         <LinkButton
           className="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
           href="https://github.com/satnaing/astro-paper#readme"
         >
-          README
-        </LinkButton> for more info.
+          astro-paper
+        </LinkButton>.
       </p>
       {
         // only display if at least one social link is enabled
