--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         the contacts below.
       </p>
       <p>
-        Website n=built with Astro using Sat Naing's
+        Website built with Astro using Sat Naing's
         <LinkButton
           className="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
           href="https://github.com/satnaing/astro-paper#readme"
